[add]ランキングページの作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,6 +69,11 @@
   border-style: none dashed none none;
 }
 
+.dashed-top {
+  border: #17a2b8;
+  border-style:  dashed none none none;
+}
+
 
 .top-gradient {
   background: linear-gradient(to right, #fff 50%, #6dc7d6);
