--- a/app/views/public/homes/not_browse.html.erb
+++ b/app/views/public/homes/not_browse.html.erb
@@ -1,26 +1,8 @@
-<div class="d-flex justify-content-around py-5 text-info">
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-</div>
+<%= render partial: 'layouts/fish_line' %>
 <div class="d-flex justify-content-center py-3">
   <div class="h3 text-primary">Sorry!</div>
 </div>
 <div class="d-flex justify-content-center py-3">
   <div class="h5 text-info">退会済みユーザーのため、閲覧できません。</div>
 </div>
-<div class="d-flex justify-content-around py-5 text-info">
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-  <div><i class="fa-solid fa-fish fa-lg"></i></div>
-</div>
+<%= render partial: 'layouts/fish_line' %>
