--- a/app/views/public/relationships/show.html.erb
+++ b/app/views/public/relationships/show.html.erb
@@ -1,11 +1,9 @@
 <div class="row">
   <div class="col-12 py-4">
     <h4 class="text-info"><%= @user.nickname %>さんのフォロー 一覧</h4>
-    <% @follows.each do |follow| %>
+    <% @users.each do |user| %>
       <div>
-        <% @follower_of_id = follow.follower_id  %>
-        <% follower = User.find_user(@follower_of_id) %>
-        <%= follower.nickname %>
+        <%= user.nickname %>
       </div>
     <% end %>
   </div>
