[fix]Relationship リンク先設定

--- a/app/views/public/homes/rank.html.erb
+++ b/app/views/public/homes/rank.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-6 py-4">
+  <div class="col-lg-6 col-12 py-4">
     <h4 class="text-info"><%= @current_user.nickname %>さんのランキング</h4>
     <h5 class="text-info mt-3">いいねTOP5</h5>
     <div class="">
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <div class="col-6 py-4">
+  <div class="col-lg-6 col-12 py-4">
     <h4 class="text-success">みんなのランキング</h4>
     <h5 class="text-success mt-3">いいねTOP5</h5>
     <div class="">
