--- a/app/views/public/relationships/show.html.erb
+++ b/app/views/public/relationships/show.html.erb
@@ -1,9 +1,23 @@
 <div class="row">
-  <div class="col-12 py-4">
-    <h4 class="text-info"><%= @user.nickname %>さんのフォロー 一覧</h4>
-    <% @users.each do |user| %>
-      <div>
-        <%= user.nickname %>
+  <div class="col-lg-6 col-12 py-4">
+    <h4 class="text-info"><%= @user.nickname %>さんがフォローしている人</h4>
+    <% @following_users.each do |user| %>
+      <div class="py-2">
+        <%= link_to public_user_path(user), class: 'text-dark' do %>
+          <%= image_tag user.get_icon_image(30,30), class: 'border rounded-circle' %>
+          <span><%= user.nickname %></span>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+  <div class="col-lg-6 col-12 py-4">
+    <h4 class="text-success"><%= @user.nickname %>さんをフォローしている人</h4>
+    <% @follower_users.each do |user| %>
+      <div class="py-2">
+        <%= link_to public_user_path(user), class: 'text-dark' do %>
+          <%= image_tag user.get_icon_image(30,30), class: 'border rounded-circle' %>
+          <span><%= user.nickname %></span>
+        <% end %>
       </div>
     <% end %>
   </div>
