--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -10,7 +10,10 @@
 
 
   <div class="col-md-9 col-12">
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center my-3">
+      <div><%= link_to 'フォローユーザーの投稿一覧へ', public_followed_user_posts_path, class: 'btn btn-info' %></div>
+    </div>
+    <div class="d-flex justify-content-center border-top border-info pt-3">
       <div class="h5">
         <% if @selects.present? %>
           検索結果
