--- a/app/views/public/posts/followed_index.html.erb
+++ b/app/views/public/posts/followed_index.html.erb
@@ -5,16 +5,16 @@
       </div>
     </div>
     <div>
-      <% @following_users.each do |u| %>
-        <%= u.nickname %>
-      <% end %>
-
-      <% @posts.each do |post| %>
-        <% if post.user.is_deleted == false %>
-          <%= render partial: 'layouts/post_partial/body',locals: { post: post, user: post.user, current_user: @current_user }  %>
-          <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: @user, current_user: @current_user }  %>
+      <% @following_users.each do |follow_user| %>
+        <% follow_user.posts.each do |post| %>
+          <% if post.user.is_deleted == false %>
+            <% if post.is_released == true %>
+              <%= render partial: 'layouts/post_partial/body',locals: { post: post, user: post.user, current_user: @current_user }  %>
+              <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: @user, current_user: @current_user }  %>
+            <% end %>
+          <% end %>
         <% end %>
-      <%end %>
+      <% end %>
     </div>
 
     <div class="d-flex justify-content-center">
