[fix]followed_index footline_go_to_show user定義

--- a/app/views/public/posts/followed_index.html.erb
+++ b/app/views/public/posts/followed_index.html.erb
@@ -9,7 +9,7 @@
         <% if post.user.is_deleted == false %>
           <% if post.is_released == true %>
             <%= render partial: 'layouts/post_partial/body',locals: { post: post, user: post.user, current_user: @current_user }  %>
-            <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: @user, current_user: @current_user }  %>
+            <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: post.user, current_user: @current_user }  %>
           <% end %>
         <% end %>
       <% end %>
