[add]カレンダーから投稿の日付検索機能

--- a/app/views/public/homes/_calendar.html.erb
+++ b/app/views/public/homes/_calendar.html.erb
@@ -5,7 +5,9 @@
   <% posts.each do |post| %>
     <div>
       <% if post.present? %>
-        <i class="fa-solid fa-paw" style="color:#007bff"></i>
+        <%= link_to public_user_posts_path(@user, date) do %>
+          <i class="fa-solid fa-paw" style="color:#007bff"></i>
+        <% end %>
       <% end %>
     </div>
   <% end %>
