--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -11,7 +11,7 @@
 
   <div class="col-md-9 col-12">
     <div class="d-flex justify-content-center my-3">
-      <div><%= link_to 'フォローユーザーの投稿一覧へ', public_followed_user_posts_path, class: 'btn btn-info' %></div>
+      <div><%= link_to 'フォローユーザーの投稿一覧へ', public_followed_user_posts_path, class: 'btn btn-outline-info' %></div>
     </div>
     <div class="d-flex justify-content-center border-top border-info pt-3">
       <div class="h5">
