--- a/app/views/layouts/_common_user_show.html.erb
+++ b/app/views/layouts/_common_user_show.html.erb
@@ -13,7 +13,7 @@
           アイコン画像
         </div>
         <div class="flex-grow-1 bd-highlight ">
-          <%= image_tag user.get_icon_image(100,100), class: 'border rounded-circle' %>
+          <%= image_tag user.get_icon_image(100,100), class: 'frame-circle' %>
         </div>
       </div>
 
