--- a/app/views/public/homes/rank.html.erb
+++ b/app/views/public/homes/rank.html.erb
@@ -30,7 +30,7 @@
               第<%= i %>位
             </div>
             <div class="text-dark p-1">
-              <%= image_tag post.user.get_icon_image(20,20), class: 'border rounded-circle' %>
+              <%= image_tag post.user.get_icon_image(20,20), class: 'frame-circle' %>
               <%= post.user.nickname  %>：
             </div>
             <div class="p-1">
