--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -4,7 +4,7 @@
     </div>
     <div>
       <% @tags.each do |tag| %>
-        <div class="border-bottom border-info m-3 p-2 d-flex justify-content-between">
+        <div class="delimiter-b d-flex justify-content-between">
           <div class="pt-3">
             <%= tag.name %>
           </div>
