--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -11,10 +11,10 @@
     </div>
     <div>
       <% @users.each do |user| %>
-        <div class="border-bottom border-info m-3 p-2 d-flex justify-content-between">
+        <div class="delimiter-b d-flex justify-content-between">
           <div>
             <%= link_to admin_user_path(user), class: 'text-dark mr-auto bd-hightlight h5' do %>
-              <%= image_tag user.get_icon_image(30,30), class: 'border rounded-circle' %>
+              <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
               <span class="border-bottom border-dark"><%= user.nickname %></span>
             <% end %>
           </div>
