--- a/app/views/layouts/post_partial/_body.html.erb
+++ b/app/views/layouts/post_partial/_body.html.erb
@@ -25,7 +25,7 @@
     <% else %>
       <% if user.is_deleted == false %>
         <%= link_to public_user_path(post.user.id), class: 'text-dark mr-auto bd-hightlight h5' do %>
-          <%= image_tag post.user.get_icon_image(30,30), class: 'border rounded-circle' %>
+          <%= image_tag post.user.get_icon_image(30,30), class: 'frame-circle' %>
             <span class="border-bottom border-dark"><%= post.user.nickname %></span>
         <% end %>
       <% else %>
