--- a/app/views/public/relationships/show.html.erb
+++ b/app/views/public/relationships/show.html.erb
@@ -4,7 +4,7 @@
     <% @following_users.each do |user| %>
       <div class="py-2">
         <%= link_to public_user_path(user), class: 'text-dark' do %>
-          <%= image_tag user.get_icon_image(30,30), class: 'border rounded-circle' %>
+          <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
           <span><%= user.nickname %></span>
         <% end %>
       </div>
@@ -15,7 +15,7 @@
     <% @follower_users.each do |user| %>
       <div class="py-2">
         <%= link_to public_user_path(user), class: 'text-dark' do %>
-          <%= image_tag user.get_icon_image(30,30), class: 'border rounded-circle' %>
+          <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
           <span><%= user.nickname %></span>
         <% end %>
       </div>
