--- a/app/views/public/topics/show.html.erb
+++ b/app/views/public/topics/show.html.erb
@@ -6,7 +6,7 @@
         <div class="bd-hightlight">
           <% if topic_comment.user.is_deleted == false %>
             <%= link_to public_user_path(id: topic_comment.user_id) do %>
-              <%= image_tag topic_comment.user.get_icon_image(30,30), class: 'border rounded-circle' %>
+              <%= image_tag topic_comment.user.get_icon_image(30,30), class: 'frame-circle' %>
               <%= topic_comment.user.nickname %>
             <% end %>
           <% else %>
