--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -15,7 +15,7 @@
       <% @users.each do |user| %>
         <div class="border-bottom border-info m-3 p-2">
           <%= link_to public_user_path(user), class: 'text-dark mr-auto bd-hightlight h5' do %>
-            <%= image_tag user.get_icon_image(30,30), class: 'border rounded-circle' %>
+            <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
             <span class="border-bottom border-dark"><%= user.nickname %></span>
           <% end %>
         </div>
