--- a/app/views/public/goals/induction.html.erb
+++ b/app/views/public/goals/induction.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column">
-  <div class="border border-info m-5 p-5 col-9 mx-auto">
+  <div class="border-info m-5 p-5 col-9 mx-auto">
     <p>
       <i class="fa-solid fa-hands-clapping fa-lg fa-flip-horizontal" style="color:#007bff"></i>
       <b class="text-primary">目標が設定されました！</b>
