--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,26 +79,53 @@
   background: linear-gradient(to right, #fff 50%, #6dc7d6);
 }
 
+.border-info {
+  border: solid 1px #17a2b8;
+  border-radius: 5px;
+}
+
+.border-primary {
+  border: solid 1px #007bff;
+  border-radius: 5px;
+}
+
+.border-success {
+  border: solid 1px #28a745;
+  border-radius: 5px;
+}
+
+.border-secondary {
+  border: solid 1px #6c757d;
+  border-radius: 5px;
+}
+
 .border {
   border-radius: 5px;
-  border: #17a2b8;
 }
 
 // border-bottom border-info p-2 m-3
 .delimiter-b {
-  border: #17a2b8;
-  border-width: 1px;
-  border-style: none none solid none;
+  border-bottom: solid 1px #17a2b8;
   padding: 0.5rem;
-  mergin: 1rem;
+  margin: 1rem;
+}
+
+// border-top border-info pt-3
+.delimiter-t {
+  border-top: solid 1px #17a2b8;
+  padding-top: 1rem;
 }
 
 // border rouended-circle
 .frame-circle {
   border-radius: 50%;
-  border: #6c757d;
-  border-style: solid;
-  border-width: 0.5px;
+  border: solid 0.5px #6c757d;
+}
+
+//text-dark border-bottom border-dark
+.link-name {
+  color: #343a40;
+  border-bottom: dashed 2px #87CEFA;
 }
 
 .back-fish {
