--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -13,9 +13,9 @@
       <% @users.each do |user| %>
         <div class="delimiter-b d-flex justify-content-between">
           <div>
-            <%= link_to admin_user_path(user), class: 'text-dark mr-auto bd-hightlight h5' do %>
+            <%= link_to admin_user_path(user), class: 'mr-auto bd-hightlight h5' do %>
               <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
-              <span class="border-bottom border-dark"><%= user.nickname %></span>
+              <span class="link-name"><%= user.nickname %></span>
             <% end %>
           </div>
           <div>会員ステータス　：　<%= user.withdrawal_or_valibity %></div>
