--- a/app/views/public/goals/new.html.erb
+++ b/app/views/public/goals/new.html.erb
@@ -10,7 +10,7 @@
       <div class="col-6"><%= f.text_field :title, class: 'px-1 col-12', placeholder:"例）12/18のTOEIC L&Rで700点以上取る！" %></div>
     </div>
     <div class="d-flex justify-content-center mt-5">
-      <div class="text-secondary border border-info p-3">
+      <div class="text-secondary border-info p-3">
         <p class="mt-3"><b>目標設定のポイント</b></p>
         <ul>
           <li>具体的な期限を設定・・・・・・・・・・例）1年以内に、3ヶ月で、3/14の　など</li>
