--- a/app/views/public/posts/_new.html.erb
+++ b/app/views/public/posts/_new.html.erb
@@ -1,4 +1,4 @@
-<div class="border-top border-info pt-3">
+<div class="delimiter-t">
   <h5 class="text-info">今日の投稿</h5>
 
     <%= form_with model: @new_post, url: public_posts_path, method: :post do |f| %>
@@ -19,7 +19,7 @@
 
       <p class="mb-0">投稿内容</p>
         <%= render 'layouts/error_messages', model: f.object, attribute: :body %>
-        <%= f.text_area :body, placeholder:"入力は140字まで",class: 'mx-1 mb-2  px-1 col-12 border border-info',rows: '6' %>
+        <%= f.text_area :body, placeholder:"入力は140字まで",class: 'mx-1 mb-2  px-1 col-12 border-info',rows: '6' %>
 
       <p class="mb-0">画像(任意)</p>
         <div class="mx-1 mb-2">
@@ -27,7 +27,7 @@
         </div>
 
       <p class="mb-0">明日の目標(任意)</p>
-        <%= f.text_field :tomorrow_objective, placeholder:"入力は20字まで",class: 'mx-1 mb-2 px-1 col-12 border border-info' %>
+        <%= f.text_field :tomorrow_objective, placeholder:"入力は20字まで",class: 'mx-1 mb-2 px-1 col-12 border-info' %>
 
       <p class="mb-0">タグ(複数選択可)</p>
         <%= render 'layouts/error_messages', model: f.object, attribute: :tag_ids %>
