--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -13,7 +13,7 @@
     <div class="d-flex justify-content-center my-3">
       <div><%= link_to 'フォローユーザーの投稿一覧へ', public_followed_user_posts_path, class: 'btn btn-outline-info' %></div>
     </div>
-    <div class="d-flex justify-content-center border-top border-info pt-3">
+    <div class="d-flex justify-content-center delimiter-t">
       <div class="h5">
         <% if @selects.present? %>
           検索結果
