--- a/app/views/public/relationships/show.html.erb
+++ b/app/views/public/relationships/show.html.erb
@@ -3,9 +3,9 @@
     <h4 class="text-info"><%= @user.nickname %>さんがフォローしている人</h4>
     <% @following_users.each do |user| %>
       <div class="py-2">
-        <%= link_to public_user_path(user), class: 'text-dark' do %>
+        <%= link_to public_user_path(user) do %>
           <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
-          <span><%= user.nickname %></span>
+          <span class="link-name"><%= user.nickname %></span>
         <% end %>
       </div>
     <% end %>
@@ -14,9 +14,9 @@
     <h4 class="text-success"><%= @user.nickname %>さんをフォローしている人</h4>
     <% @follower_users.each do |user| %>
       <div class="py-2">
-        <%= link_to public_user_path(user), class: 'text-dark' do %>
+        <%= link_to public_user_path(user) do %>
           <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
-          <span><%= user.nickname %></span>
+          <span class="link-name"><%= user.nickname %></span>
         <% end %>
       </div>
     <% end %>
