--- a/app/views/admin/topics/index.html.erb
+++ b/app/views/admin/topics/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-3">
-    <div class="border-bottom border-info pb-3 mb-5">
+    <div class="delimiter-b">
       <%= form_tag({controller:"topics",action:"index"}, method: :get) do %>
         <%= render partial: 'layouts/tag_search' %>
       <% end %>
@@ -18,11 +18,11 @@
     </div>
 
     <% @topics.each do |topic| %>
-      <div class="border-bottom border-info py-2 col-12">
+      <div class="delimiter-b col-12">
         <%= link_to admin_topic_path(topic), class: 'text-dark mr-auto bd-hightlight' do %>
           <div class="d-flex bd-hightlight">
             <div class="bd-hightlight">
-              <%= image_tag topic.user.get_icon_image(30,30), class: 'border rounded-circle' %>
+              <%= image_tag topic.user.get_icon_image(30,30), class: 'frame-circle' %>
               <%= topic.user.nickname %> 【<%= topic.title %>】
             </div>
             <div class="flex-grow-1 bd-hightlight">
