--- a/app/views/layouts/post_partial/_comment_post.html.erb
+++ b/app/views/layouts/post_partial/_comment_post.html.erb
@@ -13,7 +13,7 @@
   <label class="text-secondary">コメント件数：<%= post.post_comments.count %></label>
   <div class="overflow-auto"  style="height:250px;">
     <% @post_comments.each do |post_comment| %>
-      <div class="border-bottom border-info my-3 mx-5">
+      <div class="delimiter-b">
         <div class="d-flex bd-hightlight">
           <div class="bd-hightlight">
             <% if post_comment.user.is_deleted == false %>
