--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -16,7 +16,7 @@
       <%= render partial: 'layouts/post_partial/body',locals: { post: @post, user: @user, current_user: @current_user }  %>
       <%= render partial: 'layouts/post_partial/footline_go_to_user_index',locals: { post: @post, user: @user }  %>
     </div>
-    <div class="border-top border-info">
+    <div class="delimiter-t">
       <%= render partial: 'layouts/post_partial/comment_post',locals: { post: @post, post_comment: @post_comment, current_user: @current_user }  %>
     </div>
   <% else %>
@@ -25,7 +25,7 @@
         <%= render partial: 'layouts/post_partial/body',locals: { post: @post, user: @user, current_user: @current_user }  %>
         <%= render partial: 'layouts/post_partial/footline_go_to_user_index',locals: { post: @post, user: @user }  %>
       </div>
-      <div class="border-top border-info">
+      <div class="delimiter-t">
       <%= render partial: 'layouts/post_partial/comment_post',locals: { post: @post, post_comment: @post_comment, current_user: @current_user }  %>
     </div>
     <% else %>
