--- a/app/views/public/topics/show.html.erb
+++ b/app/views/public/topics/show.html.erb
@@ -1,7 +1,7 @@
 <h4 class="text-info"><%= @topic.title %></h4>
 <div class="overflow-auto"  style="height:400px;">
   <% @topic_comments.each do |topic_comment| %>
-    <div class="border-bottom border-info my-2 mx-5">
+    <div class="delimiter-b">
       <div class="d-flex bd-hightlight">
         <div class="bd-hightlight">
           <% if topic_comment.user.is_deleted == false %>
@@ -28,7 +28,7 @@
 </div>
 
 <%= form_with model: [@topic, @topic_comment], url: public_topic_topic_comments_path(@topic), method: :post do |f| %>
-  <div class="d-flex bd-hightlight px-3 border-top border-info">
+  <div class="d-flex bd-hightlight px-3 pb-3 delimiter-t">
     <div class="flex-grow-1 bd-hightlight"><%= f.text_area :body, placeholder:"コメントを入力",class: 'my-3 px-1 col-12 border border-info',rows: '2' %></div>
     <div class="bd-hightlight">
       <%= f.button :type => "submit", class: 'btn btn-outline-primary mt-3 ml-3' do %>
