--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div>
       <% @users.each do |user| %>
-        <div class="border-bottom border-info m-3 p-2">
+        <div class="delimiter-b">
           <%= link_to public_user_path(user), class: 'mr-auto bd-hightlight h5' do %>
             <%= image_tag user.get_icon_image(30,30), class: 'frame-circle' %>
             <span class="link-name"><%= user.nickname %></span>
