--- a/app/views/public/relationships/show.html.erb
+++ b/app/views/public/relationships/show.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-lg-6 col-12 py-4">
     <h4 class="text-info"><%= @user.nickname %>さんがフォローしている人</h4>
+    <p class="text-secondary">フォロー数：<%= @user.followings.count %>人</p>
     <% @following_users.each do |user| %>
       <div class="py-2">
         <%= link_to public_user_path(user) do %>
@@ -12,6 +13,7 @@
   </div>
   <div class="col-lg-6 col-12 py-4">
     <h4 class="text-success"><%= @user.nickname %>さんをフォローしている人</h4>
+    <p class="text-secondary">フォロワー数：<%= @user.followers.count %>人</p>
     <% @follower_users.each do |user| %>
       <div class="py-2">
         <%= link_to public_user_path(user) do %>
