[fix]view styleの記述をscssへ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -155,6 +155,22 @@
   border-bottom: dashed 2px #87CEFA;
 }
 
+.icon-info {
+  color: #17a2b8;
+}
+
+.height150 {
+  height: 150px;
+}
+
+.height250 {
+  height: 250px;
+}
+
+.height400 {
+  height: 400px;
+}
+
 .back-fish {
   background-image: image-url('back-fish.png');
   background-repeat: no-repeat;
