--- a/app/views/admin/topics/show.html.erb
+++ b/app/views/admin/topics/show.html.erb
@@ -1,5 +1,5 @@
 <h4 class="text-info"><%= @topic.title %></h4>
-<div class="overflow-auto"  style="height:400px;">
+<div class="overflow-auto height400">
   <% @topic_comments.each do |comment| %>
     <div class="delimiter-b">
       <div class="d-flex bd-hightlight">
