--- a/app/views/layouts/post_partial/_body.html.erb
+++ b/app/views/layouts/post_partial/_body.html.erb
@@ -1,6 +1,5 @@
 <div class="border-info m-3 py-2 px-2">
   <div class="d-flex bd-hightlight">
-<%# ユーザー名または公開非公開選択 %>
     <% if user == current_user %>
       <div class="mr-auto bd-hightlight">
         <div class="d-flex justify-content-between">
@@ -35,7 +34,7 @@
 <%# 非公開アイコン %>
     <% if post.is_released == false %>
       <div class="mx-2">
-        <i class="fa-solid fa-lock fa-lg" style="color:#17a2b8"></i>
+        <i class="fa-solid fa-lock fa-lg icon-info"></i>
       </div>
     <% end %>
 
@@ -45,11 +44,11 @@
 <%# 達成度アイコン %>
       <div class="bd-hightlight ml-3">
         <% if post.achivement == "excellence" %>
-          <span><i class="fa-regular fa-face-laugh-squint fa-2x" style="color:#17a2b8"></i></span>
+          <span><i class="fa-regular fa-face-laugh-squint fa-2x icon-info"></i></span>
         <% elsif post.achivement == "good" %>
-          <span><i class="fa-regular fa-face-smile fa-2x" style="color:#17a2b8"></i></span>
+          <span><i class="fa-regular fa-face-smile fa-2x icon-info"></i></span>
         <% else %>
-          <span><i class="fa-regular fa-face-rolling-eyes fa-2x" style="color:#17a2b8"></i></span>
+          <span><i class="fa-regular fa-face-rolling-eyes fa-2x icon-info"></i></span>
         <% end %>
       </div>
    </div>
