--- a/app/views/public/users/withdrawal.html.erb
+++ b/app/views/public/users/withdrawal.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column">
 
-  <div class="border border-info m-5 p-5 col-9 mx-auto">
+  <div class="border-info m-5 p-5 col-9 mx-auto">
     <p class="text-info"><b>退会お手続き</b></p>
     <p>退会手続きを行うと、再びこのアカウントを使用することはできなくなります。</p>
     <p>このまま退会手続きに進んでもよろしいですか？</p>
